--- a/byte.cabal
+++ b/byte.cabal
@@ -34,13 +34,26 @@ library
     -- Text.Slice
   default-language: Haskell2010
 
-test-suite bytearray-test
+test-suite test
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  main-is: Main.hs
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , bytearray
+    , byte
+    , hedgehog >= 0.5
+    , tasty-hedgehog >= 0.1.0.2
+    , tasty >= 1.0
+    , containers >= 0.5.10
   default-language: Haskell2010
+
+benchmark bench
+  type: exitcode-stdio-1.0
+  build-depends:
+      base
+    , byte
+    , gauge
+  default-language: Haskell2010
+  hs-source-dirs: bench
+  main-is: Main.hs
