--- a/byte.cabal
+++ b/byte.cabal
@@ -44,6 +44,7 @@ test-suite test
     , byte
     , hedgehog >= 0.5
     , tasty-hedgehog >= 0.1.0.2
+    , tasty-hunit >= 0.9
     , tasty >= 1.0
     , containers >= 0.5.10
   default-language: Haskell2010
