--- a/byte.cabal
+++ b/byte.cabal
@@ -26,12 +26,12 @@ library
     , ghc-prim >= 0.5.1.1 && < 0.6
     , primitive >= 0.6 && < 0.7
   exposed-modules:
-    Byte.Array
-    Byte.Array.Mutable
-    Byte.Array.Window
-    Byte.Slice
-    Text.Array
-    Text.Slice
+    Packed.Bytes
+    Packed.Bytes.Window
+    Packed.Bytes.Mutable
+    Packed.Bytes.Small
+    Packed.Text
+    Packed.Text.Small
   default-language: Haskell2010
 
 test-suite test
