--- a/byte.cabal
+++ b/byte.cabal
@@ -47,6 +47,7 @@ test-suite test
     , tasty-hunit >= 0.9
     , tasty >= 1.0
     , containers >= 0.5.10
+    , ghc-prim
   default-language: Haskell2010
 
 benchmark bench
