--- a/packed.cabal
+++ b/packed.cabal
@@ -1,4 +1,4 @@
-name: byte
+name: packed
 version: 0.1.0.0
 description: Please see the README on Github at <https://github.com/andrewthad/bytearray#readme>
 homepage: https://github.com/andrewthad/bytearray#readme
@@ -41,7 +41,7 @@ test-suite test
       test
   build-depends:
       base >=4.7 && <5
-    , byte
+    , packed
     , hedgehog >= 0.5
     , tasty-hedgehog >= 0.1.0.2
     , tasty-hunit >= 0.9
@@ -54,7 +54,7 @@ benchmark bench
   type: exitcode-stdio-1.0
   build-depends:
       base
-    , byte
+    , packed
     , gauge
   default-language: Haskell2010
   hs-source-dirs: bench
