--- a/packed.cabal
+++ b/packed.cabal
@@ -1,5 +1,5 @@
 name: packed
-version: 0.1.0.0
+version: 0.1.0
 description: Please see the README on Github at <https://github.com/andrewthad/bytearray#readme>
 homepage: https://github.com/andrewthad/bytearray#readme
 bug-reports: https://github.com/andrewthad/bytearray/issues
@@ -30,6 +30,7 @@ library
     Packed.Bytes.Window
     Packed.Bytes.Mutable
     Packed.Bytes.Small
+    -- Packed.Bytes.Table
     Packed.Text
     Packed.Text.Small
   default-language: Haskell2010
@@ -56,6 +57,8 @@ benchmark bench
       base
     , packed
     , gauge
+    , bytestring
+    , hashable
   default-language: Haskell2010
   hs-source-dirs: bench
   main-is: Main.hs
