--- a/packed.cabal
+++ b/packed.cabal
@@ -59,6 +59,9 @@ benchmark bench
     , gauge
     , bytestring
     , hashable
+    , containers
+    , unordered-containers
+    , primitive
   default-language: Haskell2010
   hs-source-dirs: bench
   main-is: Main.hs
