--- a/packed.cabal
+++ b/packed.cabal
@@ -33,6 +33,7 @@ library
     Packed.Bytes.Table
     Packed.Bytes.Parser
     Packed.Bytes.Stream
+    Packed.Bytes.Set
     Packed.Text
     Packed.Text.Small
   default-language: Haskell2010
@@ -50,6 +51,7 @@ test-suite test
     , tasty-hunit >= 0.9
     , tasty >= 1.0
     , containers >= 0.5.10
+    , split
     , ghc-prim
   default-language: Haskell2010
 
