--- a/packed.cabal
+++ b/packed.cabal
@@ -1,5 +1,5 @@
 name: packed
-version: 0.1.0
+version: 0.2.0
 description: Please see the README on Github at <https://github.com/andrewthad/bytearray#readme>
 homepage: https://github.com/andrewthad/bytearray#readme
 bug-reports: https://github.com/andrewthad/bytearray/issues
@@ -41,8 +41,11 @@ library
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
+  other-modules:
+    Parser.Http.Request
   hs-source-dirs:
       test
+    , common
   build-depends:
       base >=4.7 && <5
     , packed
@@ -53,10 +56,17 @@ test-suite test
     , containers >= 0.5.10
     , split
     , ghc-prim
+    , primitive
   default-language: Haskell2010
 
 benchmark bench
   type: exitcode-stdio-1.0
+  main-is: Main.hs
+  other-modules:
+    Parser.Http.Request
+  hs-source-dirs:
+      bench
+    , common
   build-depends:
       base
     , packed
@@ -66,6 +76,6 @@ benchmark bench
     , containers
     , unordered-containers
     , primitive
+    , split
   default-language: Haskell2010
-  hs-source-dirs: bench
-  main-is: Main.hs
+
