added Tries and tweaked a bunch of things. Currently fails the test suite.

--- a/packed.cabal
+++ b/packed.cabal
@@ -43,8 +43,12 @@ library
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
+  ghc-options: -rtsopts -threaded
   other-modules:
+    Parser
     Parser.Http.Request
+    Data.Trie.Naive
+    MinimalTrieParser
   hs-source-dirs:
       test
     , common
