--- a/packed.cabal
+++ b/packed.cabal
@@ -22,9 +22,11 @@ source-repository head
 library
   hs-source-dirs: src
   build-depends:
-      base >= 4.9 && < 5.0
+      base >= 4.11 && < 5.0
     , ghc-prim >= 0.5.0 && < 0.6
-    , primitive >= 0.6.1 && < 0.7
+    , primitive >= 0.6.4 && < 0.7
+  if impl(ghc < 8.4.3)
+    build-depends: invalid-cabal-flag-settings < 0
   exposed-modules:
     Packed.Bytes
     Packed.Bytes.Window
@@ -36,6 +38,8 @@ library
     Packed.Bytes.Stream.IO
     Packed.Bytes.Set
     Packed.Bytes.Trie
+    Packed.Bytes.Builder
+    Packed.Bytes.Builder.IO
     Packed.Text
     Packed.Text.Small
   default-language: Haskell2010
