--- a/packed.cabal
+++ b/packed.cabal
@@ -68,6 +68,9 @@ test-suite test
     , split
     , ghc-prim
     , primitive
+    , quickcheck-classes
+    , tasty-quickcheck
+    , QuickCheck
   default-language: Haskell2010
 
 benchmark bench
