--- a/packed.cabal
+++ b/packed.cabal
@@ -1,15 +1,15 @@
+cabal-version: 2.0
 name: packed
 version: 0.2.0
-description: Please see the README on Github at <https://github.com/andrewthad/bytearray#readme>
-homepage: https://github.com/andrewthad/bytearray#readme
-bug-reports: https://github.com/andrewthad/bytearray/issues
+description: Please see the README on Github at <https://github.com/andrewthad/packed#readme>
+homepage: https://github.com/andrewthad/packed#readme
+bug-reports: https://github.com/andrewthad/packed/issues
 author: Andrew Martin
 maintainer: andrew.thaddeus@gmail.com
 copyright: 2017 Andrew Martin
 license: BSD3
 license-file: LICENSE
 build-type: Simple
-cabal-version: >= 1.10
 
 extra-source-files:
   ChangeLog.md
@@ -17,7 +17,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/andrewthad/bytearray
+  location: https://github.com/andrewthad/packed
 
 library
   hs-source-dirs: src
