--- a/packed.cabal
+++ b/packed.cabal
@@ -43,12 +43,14 @@ library
     Packed.Text
     Packed.Text.Small
     Packed.Text.Window
+    Packed.Json.Decoding
+  ghc-options: -O2 -Wall
   default-language: Haskell2010
 
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
-  ghc-options: -rtsopts -threaded
+  ghc-options: -rtsopts -threaded -O2
   other-modules:
     Parser
     Parser.Http.Request
@@ -91,5 +93,6 @@ benchmark bench
     , unordered-containers
     , primitive
     , split
+  ghc-options: -O2 -Wall
   default-language: Haskell2010
 
