--- a/packed.cabal
+++ b/packed.cabal
@@ -6,7 +6,7 @@ homepage: https://github.com/andrewthad/packed#readme
 bug-reports: https://github.com/andrewthad/packed/issues
 author: Andrew Martin
 maintainer: andrew.thaddeus@gmail.com
-copyright: 2017 Andrew Martin
+copyright: 2018 Andrew Martin
 license: BSD3
 license-file: LICENSE
 build-type: Simple
@@ -25,9 +25,11 @@ library
       base >= 4.11 && < 5.0
     , ghc-prim >= 0.5.0 && < 0.6
     , primitive >= 0.6.4 && < 0.7
+    , primitive-maybe >= 0.1 && < 0.2
   if impl(ghc < 8.4.3)
     build-depends: base < 0
   exposed-modules:
+    Data.ByteMap
     Packed.Bytes
     Packed.Bytes.Window
     Packed.Bytes.Mutable
@@ -57,6 +59,7 @@ test-suite test
     Parser.Http.Request
     Data.Trie.Naive
     MinimalTrieParser
+    ByteMap
   hs-source-dirs:
       test
     , common
@@ -70,8 +73,8 @@ test-suite test
     , containers >= 0.5.10
     , split
     , ghc-prim
-    , primitive
-    , quickcheck-classes
+    , primitive >= 0.6.4
+    , quickcheck-classes >= 0.4.12
     , tasty-quickcheck
     , QuickCheck
   default-language: Haskell2010
