--- a/packed.cabal
+++ b/packed.cabal
@@ -34,8 +34,9 @@ library
     Packed.Bytes.Window
     Packed.Bytes.Mutable
     Packed.Bytes.Small
-    Packed.Bytes.Table
     Packed.Bytes.Parser
+    Packed.Bytes.Table
+    Packed.Bytes.Stream.Parser
     Packed.Bytes.Stream.ST
     Packed.Bytes.Stream.IO
     Packed.Bytes.Set
@@ -70,13 +71,13 @@ test-suite test
     , tasty-hedgehog >= 0.1.0.2
     , tasty-hunit >= 0.9
     , tasty >= 1.0
-    , containers >= 0.5.10
+    , containers >= 0.5.11 && < 0.6
     , split
     , ghc-prim
     , primitive >= 0.6.4
     , quickcheck-classes >= 0.4.12
     , tasty-quickcheck
-    , QuickCheck
+    , QuickCheck == 2.11.3
   default-language: Haskell2010
 
 benchmark bench
@@ -93,7 +94,7 @@ benchmark bench
     , gauge
     , bytestring
     , hashable
-    , containers
+    , containers >= 0.5.11 && < 0.6
     , unordered-containers
     , primitive
     , split
