--- a/cabal.project
+++ b/cabal.project
@@ -1,3 +1,3 @@
-packages: . ../primitive-maybe ../primitive ../primitive-checked
-with-compiler: /home/amartin/local/bin/ghc-8.6.0.20180803
+packages: . ../primitive-maybe ../primitive-checked
+with-compiler: /opt/ghc/8.6.1/bin/ghc
 allow-newer: base, template-haskell, stm
