--- a/packed.cabal
+++ b/packed.cabal
@@ -97,7 +97,7 @@ benchmark bench
     , hashable
     , containers >= 0.5.11 && < 0.6
     , unordered-containers
-    , primitive
+    , primitive >= 0.6.4
     , split
   ghc-options: -O2 -Wall
   default-language: Haskell2010
